Bug 1320644 - Don't use __stdcall with SkiaGLGlue. r=mchang, a=jcristau

MozReview-Commit-ID: 5pljJkGSN8R